homepage: small grammar tweaks (The/the)

--- a/python/fatcat_web/templates/home.html
+++ b/python/fatcat_web/templates/home.html
@@ -79,9 +79,9 @@
   <div class="ui centered grid">
     <div class="row">
       <div class="twelve wide column" style="font-size: 1.2rem;">
-        <p>This service is hosted at <b><a
-        href="https://archive.org">The Internet Archive</a></b>, a US
-        non-profit dedicated to providing Universal Access to All Knowledge.
+        <p>This service is hosted at the <b><a
+        href="https://archive.org">Internet Archive</a></b>, a US
+        non-profit digital library dedicated to providing Universal Access to All Knowledge.
         <a href="https://archive.org/donate/">Donations welcome!</a>
         <p>Development funding comes from
         <b><a href="https://blog.archive.org/2018/03/05/andrew-w-mellon-foundation-awards-grant-to-the-internet-archive-for-long-tail-journal-preservation/">The Andrew Mellon Foundation</a></b>
