coverage: clarify available/accessible terminology

--- a/python/fatcat_web/templates/entity_macros.html
+++ b/python/fatcat_web/templates/entity_macros.html
@@ -302,7 +302,7 @@ yellow
         <td style="background-color: #21ba45;">
         <td class="right aligned" >{{ "{:,}".format(stats.bright) }}
         <td class="right aligned" >{{ (frac_bright*100)|round(2,method='ceil') }}%
-        <td>preserved and publicly available (bright)
+        <td>preserved and publicly accessible (bright)
       <tr>
         <td style="background-color: darkgreen;">
         <td class="right aligned" >{{ "{:,}".format(stats.dark) }}
