container view: only show OA indicator when known
The "is_oa:False" could be that we just don't know; aren't actually
distinguishing between false and blank.

--- a/python/fatcat_web/templates/container_view.html
+++ b/python/fatcat_web/templates/container_view.html
@@ -48,11 +48,7 @@
 
 <div class="ui segment top attached">
   {% if container._es and container._es.is_oa == True %}
-  <i class="icon unlock huge orange"></i><b>Open Access Publisher</b>
-  {% elif container._es and container._es.is_oa == False  %}
-  <i class="icon lock huge black"></i><b>Not Open Access</b>
-  {% else %}
-  <i class="icon question huge grey"></i><b>Unknown OA Status</b>
+    <i class="icon unlock huge orange"></i><b>Open Access Publication</b>
   {% endif %}
 </div>
 
