--- a/python/fatcat_web/templates/400.html
+++ b/python/fatcat_web/templates/400.html
@@ -12,6 +12,8 @@
     <div class="header"></div>
     {% if err and err.description %}
       <p>{{ err.description }}
+    {% elif err %}
+      <p>{{ err }}
     {% else %}
       <p>Wasn't able to handle the request, either due to incorrect or unexpected
       input. Usually more context should be available; if you hit this page it means
