show DOAJ (and dblp) identifiers in release view

--- a/python/fatcat_web/templates/release_view.html
+++ b/python/fatcat_web/templates/release_view.html
@@ -308,7 +308,7 @@ accessible version.
   </div>
 {% endif %}
 
-{% if release.number or release.ext_ids.doi or release.ext_ids.pmid or release.ext_ids.pmcid or release.ext_ids.wikidata_qid or release.ext_ids.isbn13 or release.ext_ids.arxiv or release.ext_ids.jstor or release.ext_ids.ark %}
+{% if release.number or release.ext_ids.doi or release.ext_ids.pmid or release.ext_ids.pmcid or release.ext_ids.wikidata_qid or release.ext_ids.isbn13 or release.ext_ids.arxiv or release.ext_ids.jstor or release.ext_ids.ark or release.ext_ids.doaj or release.ext_ids.dblp %}
 <div class="ui segment attached" style="word-wrap: break-word;">
 {% if release.number %}
   <b>Number</b> &nbsp;<code>{{ release.number }}</code><br>
@@ -336,6 +336,12 @@ accessible version.
 {% endif %}
 {% if release.ext_ids.ark != None %}
   <b>ARK</b> &nbsp;<a href="https://n2t.net/{{ release.ext_ids.ark }}"><code>{{ release.ext_ids.ark }}</code></a><br>
+{% endif %}
+{% if release.ext_ids.doaj != None %}
+  <b>DOAJ</b> &nbsp;<a href="https://doaj.org/article/{{ release.ext_ids.doaj }}" title="{{ release.ext_ids.doaj }}"><code>{{ release.ext_ids.doaj[:20] }}...</code></a><br>
+{% endif %}
+{% if release.ext_ids.dblp != None %}
+  <b>dblp</b> &nbsp;<a href="https://dblp.org/rec/{{ release.ext_ids.dblp }}.html"><code>{{ release.ext_ids.dblp }}</code></a><br>
 {% endif %}
 </div>
 {% endif %}
