about: small copy edits
Thanks Cari S!

--- a/python/fatcat_web/templates/about.html
+++ b/python/fatcat_web/templates/about.html
@@ -8,7 +8,7 @@
 
 <h1></h1>
 
-<p>Fatcat is versioned, publicly-editable catalog of research publications:
+<p>Fatcat is a versioned, publicly-editable catalog of research publications:
 journal articles, conference proceedings, pre-prints, blog posts, and so forth.
 The goal is to improve the state of preservation and access to these works by
 providing a manifest of full-text content versions and locations.
@@ -46,14 +46,15 @@ href="https://guide.{{ config.FATCAT_DOMAIN }}/">The Guide</a>.
 </ul>
 
 <p>This service aspires to be a piece of sustainable, long-term, non-profit,
-free-software, collaborative, open digital infrastructure. It is primarily
+open source, collaborative, digital infrastructure. It is primarily
 designed to support the <i>archival</i> and <i>dissemination</i> roles of
 scholarly communication. It may also support the <i>registration</i> role
 (establishing precedence and authorship), but explicitly does not aid with
 <i>certification</i> of content, and is not intended to be used for
 <i>evaluation</i> of individuals, institutions, or venues. This service is
-"universal", not currated, and happily includes retracted and "predatory"
-content).
+"universal", not curated. This means that it includes retracted works
+(annotated and disclaimed as such) and content some may consider "predatory
+publishing".
 
 <h3>Sources of Metadata</h3>
 
@@ -84,17 +85,15 @@ individuals!
 
 <p>Fatcat is a project of the <b><a href="https://archive.org">Internet Archive</a></b>,
 a US-based non-profit digital library, well known for its
-<a href="https://web.archive.org">Wayback Machine</a> web archive and
-<a href="https://openlibrary.org">Open Library</a> book digitization and
-lending service. All Fatcat databases and services run on Internet Archive
-servers in California, and a copy of most full-text content is stored in the
-Archive's collections and/or web archives.
+<a href="https://web.archive.org">Wayback Machine</a> web archive,
+<a href="https://openlibrary.org">Open Library</a>, and book digitization and
+lending services.
 
 <p>Development of Fatcat and related web harvesting, indexing, and preservation
 efforts at the Archive have been partially funded (for the 2018-2019 period) by
 a generous grant from the <b>Mellon Foundation</b>
 (<a href="https://blog.archive.org/2018/03/05/andrew-w-mellon-foundation-awards-grant-to-the-internet-archive-for-long-tail-journal-preservation/">"Long-tail Open Access Journal Preservation"</a>).
-Fatcat supports this work by both tracking which open access works in known
+Fatcat supports this work by both tracking which open access works are in known
 archives and providing minimum-viable indexing and access mechanisms for
 long-tail works which otherwise would lack them.
 
