--- a/python/fatcat_web/templates/release_save.html
+++ b/python/fatcat_web/templates/release_save.html
@@ -13,14 +13,14 @@
 
 {% if spn_status == "not-configured" %}
 
-<div class="ui error message" style="margin: 2em;">
-  <div class="header">Error</div>
+<div class="ui error message" style="margin-top: 2em;">
+  <div class="header">Not Available</div>
   <p>Save Paper Now feature isn't configured, sorry about that.
 </div>
 
 {% elif spn_status == "kafka-error" %}
 
-<div class="ui error message" style="margin: 2em;">
+<div class="ui error message" style="margin-top: 2em;">
   <div class="header">Error</div>
   <p>Whoops, something went wrong and we couldn't enqueue your request. This
   didn't have anything to do with the URL you supplied; please try again later.
@@ -28,7 +28,7 @@
 
 {% elif spn_status == "success" %}
 
-<div class="ui positive message" style="margin: 2em;">
+<div class="ui positive message" style="margin-top: 2em;">
   <div class="header">Success</div>
   <p>URL has been submitted to the bot queue for crawling. If fulltext content
   is found, it will be imported into the catalog for review. Keep an eye on the
@@ -40,15 +40,24 @@
 <form class="ui form" id="save_release_form" method="POST" action="/release/{{ release.ident }}/save">
   <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 
-  <br>
-  <p>Know of a legit fulltext copy of this publication on the public web?
-  Tell us the URL and we will crawl it and provide free perpetual access.
+  <p>If you know of a legitimate public web access option for this work, you
+  can help us preserve it by filling out the form below. Using the Wayback
+  Machine's <a href="https://web.archive.org/save">"Save Page Now"</a> feature,
+  we will attempt to crawl, process, and verify the content and add it to the
+  catalog.
+
+  <p style="margin-top: 1em; margin-bottom: 1em;">If you are the author of this
+  work, and the published version is not publicly available, another option is
+  to upload an version to an institutional or discipline repository. The
+  <a href="https://shareyourpaper.org/">Share Your Paper</a> tool can help with
+  this process.
+
+  <p style="margin-top: 1em; margin-bottom: 1em;"><b>Important:</b>
+  double-check the publication stage of the file you are submitting. We
+  distinguish between pre-prints, manuscripts, and the published version of
+  record (if applicable).
 
   {{ edit_macros.form_field_basic(form.base_url) }}
-
-  <p style="margin-top: 2em; margin-bottom: 2em;"><b>Important:</b> check the publication stage of the file you are
-  submitting. We distinguish between pre-prints, manuscripts, and the
-  published version of record (if applicable).
 
   <div class="ui equal width fields">
     {{ edit_macros.form_field_basic(form.release_stage) }}
