--- a/python/fatcat_web/templates/editgroup_reviewable.html
+++ b/python/fatcat_web/templates/editgroup_reviewable.html
@@ -16,7 +16,7 @@ Limited to the most recent entries.
   {% for editgroup in entries %}
   <tr><td>
         {% if editgroup.editor.is_bot %}
-          <i class="icon bug"></i>
+          <i class="icon server"></i>
         {% else %}
           <i class="icon user"></i>
         {% endif %}
