--- a/python/fatcat_web/templates/entity_macros.html
+++ b/python/fatcat_web/templates/entity_macros.html
@@ -5,15 +5,15 @@
   <div class="ui segment pink inverted attached">
   {% if editgroup.changelog_index %}
     <b>Accepted Edit Version</b>
-    <p>This is the version of the entity as of a specific merged editgroup:
+    <p>This is the version of the entity as of a specific point in time:
   {% elif editgroup.submitted %}
     <b>Submitted Edit Version</b>
-    <p>This is a version of the entity that has been submitted for approval as part of an editgroup:
+    <p>This is a version of the entity that has been submitted for approval as part of:
   {% else %}
     <b>Edit In Progress</b>
-    <p>This is a version of the entity that has not yet been submitted for approval, part of an editgroup:
+    <p>This is a version of the entity that has not yet been submitted for approval. Part of:
   {% endif %}
-  <b><a href="/editgroup/{{ editgroup.editgroup_id }}" style="color: white; font-weight: bold;">{{ editgroup.editgroup_id }}</a></b>
+  <a href="/editgroup/{{ editgroup.editgroup_id }}" style="color: white; font-weight: bold; font-size: smaller;"><code>editgroup_{{ editgroup.editgroup_id }}</code></a>
   </div>
 {% elif entity.state == None and entity.ident == None %}
 <div class="ui segment pink inverted attached">
@@ -27,17 +27,15 @@
 </div>
 {% endif %}
 
-<div class="ui segment attached">
-  <b>Fatcat Bits</b>
-  <p>
-  {% if entity.state %}
-    State is "{{ entity.state }}".
+<div class="ui segment attached" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+  <b>Catalog Record</b>
+  {% if entity.state and entity.state != "active" %}
+    <br>State: <code>{{ entity.state }}</code>
   {% endif %}
   {% if entity.revision %}
-    Revision:
-    <br><small><code><a href="/{{ entity_type }}/rev/{{ entity.revision }}">{{ entity.revision }}</a></code></small>
+    <br>Revision: <small><code><a href="/{{ entity_type }}/rev/{{ entity.revision }}">{{ entity.revision }}</a></code></small>
   {% endif %}
-  <br><a href="
+  <br>API URL: <a href="
   {%- if config.FATCAT_DOMAIN == 'dev.fatcat.wiki' -%}
     http://localhost:9411
   {%- else -%}
@@ -52,7 +50,7 @@
     /{{ entity_type }}/rev/{{ entity.revision }}
   {% endif %}
   {% if expand %}?expand={{ expand}}{% endif %}">
-  As JSON object via API
+  JSON
   </a>
 </div>
 
