--- a/python/fatcat_web/templates/editor_editgroups.html
+++ b/python/fatcat_web/templates/editor_editgroups.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 {% block body %}
 
-<h1 class="ui header">Edit History
+<h1 class="ui header">{{ editor.username }}: Edit History
 <div class="sub header">
-    <code>editor
-      <a href="/editor/{{editor.editor_id}}">{{ editor.username }}</a>
-    </code>
-  </a>
+  <code>editor_{{editor.editor_id}}</code>
 </div>
 </h1>
+<a href="/editor/{{ editor.editor_id }}/editgroups">Edit History</a> - 
+<a href="/editor/{{ editor.editor_id }}/annotations">Comments and Annotation History</a>
 
+<br>
 <table class="ui table">
   <thead><tr>{# <th>Created (UTC) #}
              <th>Status
@@ -28,7 +28,7 @@
             Work in Progress
           {% endif %}
       <td><small><code><a href="/editgroup/{{ editgroup.editgroup_id }}">
-            {{ editgroup.editgroup_id }}
+            editgroup_{{ editgroup.editgroup_id }}
           </a></code></small>
       <td>{% if editgroup.description != None %}{{ editgroup.description }}{% endif %}
   {% endfor %}
