--- a/python/fatcat_web/templates/entity_view_metadata.html
+++ b/python/fatcat_web/templates/entity_view_metadata.html
@@ -6,6 +6,9 @@
 
 <h3>Entity Metadata (schema)</h3>
 {{ entity_macros.extra_metadata(entity._metadata) }}
+<div style="float: right;">
+  <a href="{{ config.FATCAT_API_HOST }}/{{ entity_type }}/{{ entity.ident }}">As JSON via API</a>
+</div>
 
 {% if entity.extra %}
   <h3>Extra Metadata (raw JSON)</h3>
